sequential/slurm-12837.out
rm level_client level_client.o
rm: cannot remove 'level_client': No such file or directory
rm: cannot remove 'level_client.o': No such file or directory
make: [Makefile:14: clean] Error 1 (ignored)
g++ -std=c++17 -lpthread -I ~/rapidjson/include   -c -o level_client.o level_client.cpp
level_client.cpp:19: warning: "RAPIDJSON_PARSE_ERROR_NORETURN" redefined
   19 | #define RAPIDJSON_PARSE_ERROR_NORETURN(code, offset) \
      | 
In file included from level_client.cpp:10:
/users/hchen35/rapidjson/include/rapidjson/reader.h:100: note: this is the location of the previous definition
  100 | #define RAPIDJSON_PARSE_ERROR_NORETURN(parseErrorCode, offset) \
      | 
g++ level_client.o -o level_client -lcurl
g++ -std=c++17 -lpthread -I ~/rapidjson/include  -lcurl  par_level_client.cpp   -o par_level_client
par_level_client.cpp:29:6: error: ‘mutex’ in namespace ‘std’ does not name a type
   29 | std::mutex mtx;
      |      ^~~~~
par_level_client.cpp:22:1: note: ‘std::mutex’ is defined in header ‘<mutex>’; did you forget to ‘#include <mutex>’?
   21 | #include <rapidjson/document.h>
  +++ |+#include <mutex>
   22 | #include <chrono>
par_level_client.cpp: In function ‘void process_nodes(CURL*, const std::vector<std::__cxx11::basic_string<char> >&, std::unordered_set<std::__cxx11::basic_string<char> >&, std::vector<std::__cxx11::basic_string<char> >&)’:
par_level_client.cpp:122:17: error: ‘lock_guard’ was not declared in this scope
  122 |                 lock_guard<mutex> lock(mtx);
      |                 ^~~~~~~~~~
par_level_client.cpp:122:17: note: ‘std::lock_guard’ is defined in header ‘<mutex>’; did you forget to ‘#include <mutex>’?
par_level_client.cpp:122:28: error: ‘mutex’ was not declared in this scope
  122 |                 lock_guard<mutex> lock(mtx);
      |                            ^~~~~
par_level_client.cpp:122:28: note: ‘std::mutex’ is defined in header ‘<mutex>’; did you forget to ‘#include <mutex>’?
par_level_client.cpp:122:40: error: ‘mtx’ was not declared in this scope
  122 |                 lock_guard<mutex> lock(mtx);
      |                                        ^~~
par_level_client.cpp:122:35: error: ‘lock’ was not declared in this scope
  122 |                 lock_guard<mutex> lock(mtx);
      |                                   ^~~~
par_level_client.cpp:122:35: note: ‘std::lock’ is defined in header ‘<mutex>’; did you forget to ‘#include <mutex>’?
make: *** [<builtin>: par_level_client] Error 1
Running sequential version...
Running parallel version...
/var/spool/slurm/slurmd/job12837/slurm_script: line 21: ./par_level_client: cannot execute binary file: Exec format error
/var/spool/slurm/slurmd/job12837/slurm_script: line 22: ./par_level_client: cannot execute binary file: Exec format error
/var/spool/slurm/slurmd/job12837/slurm_script: line 23: ./par_level_client: cannot execute binary file: Exec format error
Execution complete. Outputs saved in output/ directory
